--- a/am-deploy/templates/env.yaml
+++ b/am-deploy/templates/env.yaml
@@ -6,18 +6,18 @@ data:
   SS_DB_NAME: archivematica_db
   SS_DB_USER: archivematica
   SS_DB_PASSWORD: archivematica
-  SS_DB_HOST: mysql
+  SS_DB_HOST:  "mysql:3306"
   DB_PORT: "3306"
   DB_HOST: mysql
-  AM_DASHBOARD_USERNAME: demo
+  AM_DASHBOARD_USERNAME: archivematica
   AM_DASHBOARD_PASSWORD: demo
   AM_DASHBOARD_EMAIL: demo@cern.ch
   AM_DASHBOARD_ORG_NAME: CERN
   AM_DASHBOARD_ORG_ID: TESTid
   AM_DASHBOARD_API_KEY: e392
-  AM_SS_URL: {{ .Values.route.ss-hostname }}
-  AM_SS_USERNAME: demo
-  AM_SS_PASSWORD: demo
+  AM_SS_URL: {{ .Values.route.ss_hostname }}
+  AM_SS_USERNAME: archivematica
+  AM_SS_PASSWORD: archivematica
   AM_SS_API_KEY: e6282adabed84e39ffe451f8bf6ff1a67c1fc9f2
   AM_SS_EMAIL: demo@cern.ch
   AM_DASHBOARD_SITE_URL: {{ .Values.route.hostname }}
@@ -26,7 +26,7 @@ data:
   CLAMAV_MAX_STREAM_LENGTH: "2048"
   MYSQL_ROOT_PASSWORD: "12345a"
   
-  SS_DB_URL: "mysql://root:12345a@mysql:3306/archivematica_db" #mysql://USER:PASSWORD@HOST:PORT/NAME
+  SS_DB_URL: "mysql://archivematica:archivematica@mysql:3306/archivematica_db" #mysql://USER:PASSWORD@HOST:PORT/NAME
 
   # POSTGRESQL_DATABASE: { { .Values.postgres.db } }
   # POSTGRESQL_USER: { { .Values.postgres.user } }
