--- a/am-deploy/templates/env.yaml
+++ b/am-deploy/templates/env.yaml
@@ -16,6 +16,7 @@ data:
   AM_DASHBOARD_ORG_ID: TESTid
   AM_DASHBOARD_API_KEY: e392
   AM_SS_URL: {{ .Values.route.ss_hostname }}
+  AM_SS_URL_HTTP: "https://$AM_SS_URL/" # Full url is needed for archivematica dashboard init job
   AM_SS_USERNAME: archivematica
   AM_SS_PASSWORD: archivematica
   AM_SS_API_KEY: e6282adabed84e39ffe451f8bf6ff1a67c1fc9f2
