--- a/am-deploy/templates/deployment-archivematica-dashboard-job.yml
+++ b/am-deploy/templates/deployment-archivematica-dashboard-job.yml
@@ -11,7 +11,7 @@ spec:
         - image:  {{ .Values.archivematica_dashboard.image }}
           name: archivematica-dashboard-create-superuser          
           command: ["sh"]
-          args: ["-c","python /src/dashboard/src/manage.py install --username=$(AM_DASHBOARD_USERNAME) --password=$(AM_DASHBOARD_PASSWORD) --email=$(AM_DASHBOARD_EMAIL) --org-name=$(AM_DASHBOARD_ORG_NAME) --org-id=$(AM_DASHBOARD_ORG_ID) --api-key=$(AM_DASHBOARD_API_KEY) --ss-url=$(AM_SS_URL) --ss-user=$(AM_SS_USERNAME) --ss-api-key=$(AM_SS_API_KEY) --site-url=$(AM_DASHBOARD_SITE_URL)"]
+          args: ["-c","python /src/dashboard/src/manage.py install --username=$(AM_DASHBOARD_USERNAME) --password=$(AM_DASHBOARD_PASSWORD) --email=$(AM_DASHBOARD_EMAIL) --org-name=$(AM_DASHBOARD_ORG_NAME) --org-id=$(AM_DASHBOARD_ORG_ID) --api-key=$(AM_DASHBOARD_API_KEY) --ss-url=$(AM_SS_URL_HTTP) --ss-user=$(AM_SS_USERNAME) --ss-api-key=$(AM_SS_API_KEY) --site-url=$(AM_DASHBOARD_SITE_URL)"]
           envFrom:
             - secretRef:
                 name: archivematica-settings 
@@ -53,10 +53,10 @@ spec:
                 configMapKeyRef:
                   key: AM_DASHBOARD_ORG_ID
                   name: env
-            - name: AM_SS_URL
+            - name: AM_SS_URL_HTTP
               valueFrom:
                 configMapKeyRef:
-                  key: AM_SS_URL
+                  key: AM_SS_URL_HTTP
                   name: env
             - name: AM_SS_USERNAME
               valueFrom:
