--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,7 @@
 general:
   # Pick this based on your project's allowed range
   # (check the openshift.io/sa.scc.uid-range annotation)
-  user_uid: "1007090000"
+  user_uid: "1010690000"
 
 archivematica_storage_service:
   image: gitlab-registry.cern.ch/digitalmemory/archivematica-helm/archivematica-storage-service:dev
@@ -36,7 +36,7 @@ clamvd:
 
 route:
   hostname: "dm-am.web.cern.ch"
-  ss_hostname: "http://am-deploy2.web.cern.ch"
+  ss_hostname: "dm-am-ss.web.cern.ch"
   enabled: true
   tls: true
 
