--- a/am-deploy/templates/deployment-archivematica-dashboard-job.yml
+++ b/am-deploy/templates/deployment-archivematica-dashboard-job.yml
@@ -32,12 +32,12 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   key: AM_DASHBOARD_USERNAME
-                  name: env
+                  name: archivematica-settings
             - name: AM_DASHBOARD_PASSWORD
               valueFrom:
                 configMapKeyRef:
                   key: AM_DASHBOARD_PASSWORD
-                  name: env
+                  name: archivematica-settings
             - name: AM_DASHBOARD_EMAIL
               valueFrom:
                 configMapKeyRef:
@@ -62,12 +62,12 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   key: AM_SS_USERNAME
-                  name: env
+                  name: archivematica-settings
             - name: AM_SS_API_KEY
               valueFrom:
                 configMapKeyRef:
                   key: AM_SS_API_KEY
-                  name: env
+                  name: archivematica-settings
             - name: AM_DASHBOARD_SITE_URL
               valueFrom:
                 configMapKeyRef:
