Move AM_DASHBOARD_API_KEY from env to secrets

--- a/am-deploy/templates/deployment-archivematica-dashboard-job.yml
+++ b/am-deploy/templates/deployment-archivematica-dashboard-job.yml
@@ -68,6 +68,11 @@ spec:
                 secretKeyRef:
                   key: AM_SS_API_KEY
                   name: archivematica-settings
+            - name: AM_DASHBOARD_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: AM_DASHBOARD_API_KEY
+                  name: archivematica-settings
             - name: AM_DASHBOARD_SITE_URL
               valueFrom:
                 configMapKeyRef:
